Fix back-to-top overlapping issue

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -64,6 +64,7 @@ small p{
 }
 .google-map {
     margin: 3rem 0;
+    z-index: 888;
 }
 .mapouter {
     position:relative;
