--- a/sass/style.scss
+++ b/sass/style.scss
@@ -56,6 +56,7 @@
   cursor: pointer;
   border-radius: 5px;
   font-size: 2rem;
+  z-index: 999;
 }
 .hidden {
   display: none;
